--- a/scaffold_trainning/pubspec.yaml
+++ b/scaffold_trainning/pubspec.yaml
@@ -29,11 +29,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+    
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  carousel_slider: ^4.0.0
+  percent_indicator: ^3.4.0
 
 dev_dependencies:
   flutter_test:
