--- a/scaffold_trainning/pubspec.yaml
+++ b/scaffold_trainning/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   carousel_slider: ^4.0.0
   percent_indicator: ^3.4.0
+  badges: ^2.0.2
 
 dev_dependencies:
   flutter_test:
